[Fixes #179055347] Update AE user activation email

--- a/submission/notifications/src/main/resources/templates/activation-by-email.html
+++ b/submission/notifications/src/main/resources/templates/activation-by-email.html
@@ -3,12 +3,13 @@
 <p>Dear ${USERNAME}</p>
 
 <p>You have received this email because you were registered for a BioStudies database account. To setup a password for
-  your account please click in the following link: </p>
-  <a href="${URL}">Password Setup</a>
+    your account, please enter the code <b>${ACTIVATIONCODE}</b> on the activation page or click the following link:
+</p>
+<a href="${URL}">${URL}</a>
 <p/>
 <p>
-  If you experience any problems, please contact us at
-  <a href="'mailto:'  + ${MAILTO}">${MAILTO}</a>
+    If you experience any problems, please contact us at
+    <a href="'mailto:'  + ${MAILTO}">${MAILTO}</a>
 </p>
 <br/>
 Regards<br/>
@@ -16,10 +17,10 @@ BioStudies Team
 
 <br/>
 <p>
-  Privacy notice: BioStudies database requires limited processing of your personal data. By using the service you are
-  agreeing to this as outlined in our <a
+    Privacy notice: BioStudies database requires limited processing of your personal data. By using the service you are
+    agreeing to this as outlined in our <a
         href="https://www.ebi.ac.uk/data-protection/privacy-notice/biostudies-database-support">Privacy Notice</a> and
-        <a href="https://www.ebi.ac.uk/about/terms-of-use">Terms of Use</a>.
+    <a href="https://www.ebi.ac.uk/about/terms-of-use">Terms of Use</a>.
 </p>
 
 </body>
