--- a/submission/notifications/src/main/resources/templates/activation.html
+++ b/submission/notifications/src/main/resources/templates/activation.html
@@ -3,7 +3,7 @@
 <p>Dear ${USERNAME}</p>
 <p>You have received this email because you have signed up for a BioStudies database account. To activate your account
   please click on the following link:<br/>
-  <a href="${URL}">Activation link</a>
+  <a href="${URL}">${URL}</a>
 <p/>
 <p>
   If you experience any problems, please contact us at
