--- a/submission/notifications/src/main/resources/templates/reset-password.html
+++ b/submission/notifications/src/main/resources/templates/reset-password.html
@@ -2,7 +2,7 @@
 <body>
 <p>Dear ${USERNAME}</p>
 <p>You have received this email because you requested a password reset. Please click the following link:<br/>
-    <a href="${URL}">Reset password link</a>
+    <a href="${URL}">${URL}</a>
 </p>
 <p>If you experience any problems, please contact us at <a href="'mailto:'  + ${MAILTO}">${MAILTO}</a></p>
 <br/>
